--- a/server-generator/src/main/resources/vm/java/controller.java.vm
+++ b/server-generator/src/main/resources/vm/java/controller.java.vm
@@ -1,28 +1,30 @@
 package ${packageName}.controller;
 
-import java.util.List;
-import javax.servlet.http.HttpServletResponse;
-import org.springframework.security.access.prepost.PreAuthorize;
-import javax.annotation.Resource;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import ${packageName}.domain.ro.${ClassName}RO;
+import ${packageName}.domain.vo.${ClassName}VO;
+import ${packageName}.service.I${ClassName}Service;
 import com.igg.common.annotation.Log;
 import com.igg.common.core.controller.BaseController;
 import com.igg.common.core.domain.AjaxResult;
-import com.igg.common.enums.BusinessType;
-import ${packageName}.domain.${ClassName};
-import ${packageName}.service.I${ClassName}Service;
-import com.igg.common.utils.poi.ExcelUtil;
 #if($table.crud || $table.sub)
 import com.igg.common.core.page.TableDataInfo;
 #elseif($table.tree)
 #end
+import com.igg.common.enums.BusinessType;
+import com.igg.common.utils.poi.ExcelUtil;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import javax.annotation.Resource;
+import javax.servlet.http.HttpServletResponse;
+import java.util.List;
 
 /**
  * ${functionName}Controller
@@ -43,14 +45,14 @@ public class ${ClassName}Controller extends BaseController {
     @PreAuthorize("@ss.hasPermi('${permissionPrefix}:list')")
     @GetMapping("/list")
 #if($table.crud || $table.sub)
-    public TableDataInfo list(${ClassName} ${className}) {
+    public TableDataInfo list(${ClassName}RO ${className}RO) {
         startPage();
-        List<${ClassName}> list = ${className}Service.select${ClassName}List(${className});
+        List<${ClassName}VO> list = ${className}Service.select${ClassName}List(${className}RO);
         return getDataTable(list);
     }
 #elseif($table.tree)
-    public AjaxResult list(${ClassName} ${className}) {
-        List<${ClassName}> list = ${className}Service.select${ClassName}List(${className});
+    public AjaxResult list(${ClassName}RO ${className}RO) {
+        List<${ClassName}VO> list = ${className}Service.select${ClassName}List(${className}RO);
         return success(list);
     }
 #end
@@ -61,9 +63,9 @@ public class ${ClassName}Controller extends BaseController {
     @PreAuthorize("@ss.hasPermi('${permissionPrefix}:export')")
     @Log(title = "${functionName}", businessType = BusinessType.EXPORT)
     @PostMapping("/export")
-    public void export(HttpServletResponse response, ${ClassName} ${className}) {
-        List<${ClassName}> list = ${className}Service.select${ClassName}List(${className});
-        ExcelUtil<${ClassName}> util = new ExcelUtil<>(${ClassName}.class);
+    public void export(HttpServletResponse response, ${ClassName}RO ${className}RO) {
+        List<${ClassName}VO> list = ${className}Service.select${ClassName}List(${className}RO);
+        ExcelUtil<${ClassName}VO> util = new ExcelUtil<>(${ClassName}VO.class);
         util.exportExcel(response, list, "${functionName}数据");
     }
 
@@ -82,8 +84,8 @@ public class ${ClassName}Controller extends BaseController {
     @PreAuthorize("@ss.hasPermi('${permissionPrefix}:add')")
     @Log(title = "${functionName}", businessType = BusinessType.INSERT)
     @PostMapping
-    public AjaxResult add(@RequestBody ${ClassName} ${className}) {
-        return toAjax(${className}Service.insert${ClassName}(${className}));
+    public AjaxResult add(@RequestBody ${ClassName}RO ${className}RO) {
+        return toAjax(${className}Service.insert${ClassName}(${className}RO));
     }
 
     /**
@@ -92,8 +94,8 @@ public class ${ClassName}Controller extends BaseController {
     @PreAuthorize("@ss.hasPermi('${permissionPrefix}:edit')")
     @Log(title = "${functionName}", businessType = BusinessType.UPDATE)
     @PutMapping
-    public AjaxResult edit(@RequestBody ${ClassName} ${className}) {
-        return toAjax(${className}Service.update${ClassName}(${className}));
+    public AjaxResult edit(@RequestBody ${ClassName}RO ${className}RO) {
+        return toAjax(${className}Service.update${ClassName}(${className}RO));
     }
 
     /**
