--- a/server-generator/src/main/resources/vm/java/service.java.vm
+++ b/server-generator/src/main/resources/vm/java/service.java.vm
@@ -1,7 +1,9 @@
 package ${packageName}.service;
 
+import ${packageName}.domain.ro.${ClassName}RO;
+import ${packageName}.domain.vo.${ClassName}VO;
+
 import java.util.List;
-import ${packageName}.domain.${ClassName};
 
 /**
  * ${functionName}Service接口
@@ -17,39 +19,31 @@ public interface I${ClassName}Service {
      * @param ${pkColumn.javaField} ${functionName}主键
      * @return ${functionName}
      */
-    ${ClassName} select${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField});
+    ${ClassName}VO select${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField});
 
     /**
      * 查询${functionName}列表
      *
-     * @param ${className} ${functionName}
+     * @param ${className}RO ${functionName}
      * @return ${functionName}集合
      */
-    List<${ClassName}> select${ClassName}List(${ClassName} ${className});
+    List<${ClassName}VO> select${ClassName}List(${ClassName}RO ${className}RO);
 
     /**
      * 新增${functionName}
      *
-     * @param ${className} ${functionName}
+     * @param ${className}RO ${functionName}
      * @return 结果
      */
-    int insert${ClassName}(${ClassName} ${className});
+    int insert${ClassName}(${ClassName}RO ${className}RO);
 
     /**
      * 修改${functionName}
      *
-     * @param ${className} ${functionName}
+     * @param ${className}RO ${functionName}
      * @return 结果
      */
-    int update${ClassName}(${ClassName} ${className});
-
-    /**
-     * 批量删除${functionName}
-     *
-     * @param ${pkColumn.javaField}s 需要删除的${functionName}主键集合
-     * @return 结果
-     */
-    int delete${ClassName}By${pkColumn.capJavaField}s(${pkColumn.javaType}[] ${pkColumn.javaField}s);
+    int update${ClassName}(${ClassName}RO ${className}RO);
 
     /**
      * 删除${functionName}信息
@@ -58,5 +52,13 @@ public interface I${ClassName}Service {
      * @return 结果
      */
     int delete${ClassName}By${pkColumn.capJavaField}(${pkColumn.javaType} ${pkColumn.javaField});
+
+    /**
+     * 批量删除${functionName}
+     *
+     * @param ${pkColumn.javaField}s 需要删除的${functionName}主键集合
+     * @return 结果
+     */
+    int delete${ClassName}By${pkColumn.capJavaField}s(${pkColumn.javaType}[] ${pkColumn.javaField}s);
 
 }
